--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ li{
     left: 24%;
     top: 20%;
     width: 5px;
-    height: 100%;
+    height: 0;
     background-color: skyblue;
     border-radius: 50%;
 }
