--- a/style.css
+++ b/style.css
@@ -157,9 +157,8 @@ li{
     left: 24%;
     top: 20%;
     width: 5px;
-    height: 100%;
+    height: 0;
     background-color: skyblue;
-    border-radius: 50%;
 }
 .time-line::after{
     content: absolute;
