--- a/style.css
+++ b/style.css
@@ -92,9 +92,10 @@ header{
 /* ここからあやちゃん */
 .container img{
     margin-top: 200px;
-    width: 1500px;
+     width: 1500px;
     height: 600px; 
-}
+    background-size: cover;
+} 
 
 .container{
     position: relative;
@@ -108,7 +109,11 @@ header{
     font-weight: bold;
     color: white;
 }
-
+p{
+    text-align: center;
+    margin-top: 50px;
+    border-bottom: 3px solid gray;
+}
 .gohan{
     display: flex;
     justify-content: space-around;
@@ -125,24 +130,23 @@ dd{
 }
 
 dt{
-    margin-left: 150px;
+    margin-left: 120px;
     margin-top: 50px;
     font-size: 30px;
 }
 
 #breakfast{
     margin-top: 100px;
-    margin-left: 220px;
+    margin-left: 150px;
 }
 
 #lunch{
-    margin-left: 250px;
+    margin-left: 150px;
 }
 
 #dinner{
-    margin-left: 250px;
+    margin-left: 150px;
 }
-
 .time li{
     /* position: relative; */
     list-style: none;
@@ -156,18 +160,19 @@ li{
 }
 .boder-line{
     position: absolute;
-    left: 24%;
-    top: 20%;
+    left: 17%;
+    top: 15%;
     width: 5px;
-    height: 0;
+    height: 100%;
     background-color: skyblue;
+    
 }
 .time-line::after{
     content: absolute;
     top: 0;
     left: 0;
     width: 10px;
-    height: 10px;
+    /* height: 10px; */
     background-color: red;
-    
+    border-radius: 50%;
 }
