--- a/style.css
+++ b/style.css
@@ -1,17 +1,21 @@
-html { scroll-behavior: smooth;}
+html {
+    scroll-behavior: smooth;
+}
 
-header{
+header {
     width: 100%;
     margin: auto;
     position: relative;
-    
+
 }
-.slider-1 img{
+
+.slider-1 img {
     width: 100%;
     height: 600px;
-    
+
 }
-.main-menu{
+
+.main-menu {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -21,24 +25,24 @@ header{
     font-size: 20px;
     font-family: 'M PLUS Rounded 1c', sans-serif;
     background-color: transparent;
-    
+
 }
-.main-menu1{
+
+.main-menu1 {
     color: black;
     background-color: white;
 
 }
 
-.main-menu li{
+.main-menu li {
     margin-top: 20px;
     margin-left: 110px;
 
 }
-.fa-solid:hover{
-    
 
-}
-.logo{
+.fa-solid:hover {}
+
+.logo {
     position: absolute;
     z-index: 9999;
     margin-top: -250px;
@@ -47,6 +51,7 @@ header{
     height: auto;
     display: none;
 }
+
 .balloon1-top {
     position: relative;
     display: none;
@@ -59,9 +64,10 @@ header{
     background: rgb(39, 54, 62);
     margin-top: 71px;
     margin-left: -102px;
-    
-  }
-  .balloon1-top1 {
+
+}
+
+.balloon1-top1 {
     position: relative;
     display: block;
     margin: 1.5em 0;
@@ -73,8 +79,8 @@ header{
     background: rgb(39, 54, 62);
     margin-top: 71px;
     margin-left: -102px;
-  }
-  
+}
+
 .balloon1-top:before {
     content: "";
     position: absolute;
@@ -83,35 +89,26 @@ header{
     margin-left: -15px;
     border: 15px solid transparent;
     border-bottom: 15px solid #e0edff;
-  }
-  
+}
+
 .balloon1-top p {
     margin: 0;
     padding: 0;
-  }
-/* ここからあやちゃん */
-.container img{
-    margin-top: 200px;
-     width: 1500px;
-    height: 600px; 
-    background-size: cover;
-    animation: SlideIn 1.6s ;
-} 
-@keyframes SlideIn{
-    0%{
-        opacity: 0;
-        transform: translateY(64px);
-    }
-    100%{
-        opacity: 1;
-        transform: translateY(0);
-    }
 }
-.container{
+
+/* ここからあやちゃん */
+.container img {
+    margin-top: 200px;
+    width: 1500px;
+    height: 600px;
+    background-size: cover;
+}
+
+.container {
     position: relative;
 }
 
-#syokugurume{
+#syokugurume {
     position: absolute;
     top: 500px;
     left: 200px;
@@ -119,75 +116,86 @@ header{
     font-weight: bold;
     color: white;
 }
-p{
+
+.inform p {
     text-align: center;
     margin-top: 50px;
     border-bottom: 3px solid gray;
 }
-.gohan{
+
+.gohan {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.gohan img{
+.gohan img {
     /* padding-top: 100px; */
-    padding-left: 150px; 
-    margin-left: 70px; 
+    padding-left: 150px;
+    margin-left: 70px;
     margin-top: 20px;
-    width:400px;
+    width: 400px;
     height: auto;
 }
 
-dd{
+dd {
     margin-right: 250px;
     margin-left: 50px;
 }
 
-dt{
+dt {
     margin-left: 120px;
     margin-top: 50px;
     font-size: 30px;
     font-family: 'Passions Conflict', cursive;
 }
 
-#breakfast{
+#breakfast {
     margin-top: 100px;
     margin-left: 80px;
 }
-span{
+
+span {
     font-size: 20px;
 }
-#lunch{
+
+#lunch {
     margin-left: 100px;
 }
-#afternoontea{
+
+#afternoontea {
     margin-left: 50px;
 }
-#dinner{
+
+#dinner {
     margin-left: 100px;
 }
-.time li{
+
+.time li {
     /* position: relative; */
     list-style: none;
     padding: 0 0 20px 0;
 }
-li{
+
+li {
     position: relative;
 }
-.timeline dl{
+
+.timeline dl {
     margin: 0 0 20px 3em;
 }
-.boder-line{
+
+.boder-line {
     position: absolute;
     left: 13%;
     top: 15%;
     width: 5px;
     height: 100%;
     background-color: skyblue;
-    
+
 }
-.time-line::after{
+
+.time-line::after {
     content: absolute;
     top: 0;
     left: 0;
@@ -197,29 +205,33 @@ li{
     border-radius: 50%;
 }
 
-footer{
+footer {
     margin-top: 52px;
     border-top: solid 10px gray;
     position: relative;
 }
-.footer-left a{
+
+.footer-left a {
     position: absolute;
     margin-top: 50px;
     margin-left: 100px;
     padding-bottom: 50px;
     width: 200px;
 }
-.footer-bottom{
+
+.footer-bottom {
     position: absolute;
     margin-top: 120px;
     margin-left: 100px;
 }
-.footer-right img{
+
+.footer-right img {
     width: 40px;
     height: 40x;
     margin-left: 15px;
 }
-.footer-right{
+
+.footer-right {
     margin-top: 50px;
     margin-left: 1000px;
 }
